@@ -1130,28 +1130,6 @@ name|IOException
 block|{
 name|conf
 operator|.
-name|setBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|AUTO_FAILOVER_ENABLED
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|AUTO_FAILOVER_EMBEDDED
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
 name|set
 argument_list|(
 name|YarnConfiguration
@@ -1238,6 +1216,17 @@ name|InterruptedException
 throws|,
 name|IOException
 block|{
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|WebAppProxyServer
 name|webAppProxyServer
 init|=
@@ -1415,6 +1404,17 @@ name|InterruptedException
 throws|,
 name|IOException
 block|{
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|cluster
 operator|.
 name|init
