@@ -698,6 +698,17 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|configuration
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|Configuration
 name|conf
 init|=
@@ -945,17 +956,6 @@ argument_list|(
 name|configuration
 argument_list|)
 decl_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|AUTO_FAILOVER_ENABLED
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 name|rm
 operator|=
 operator|new
@@ -1156,6 +1156,17 @@ name|errorMessageForService
 init|=
 literal|"Expect to get the same number of services"
 decl_stmt|;
+name|configuration
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|Configuration
 name|conf
 init|=
