@@ -1063,6 +1063,17 @@ argument_list|,
 literal|1234
 argument_list|)
 decl_stmt|;
+name|conf1
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|ResourceManager
 name|rm1
 init|=
@@ -1148,6 +1159,17 @@ argument_list|,
 literal|5678
 argument_list|)
 decl_stmt|;
+name|conf2
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|ResourceManager
 name|rm2
 init|=
