@@ -251,6 +251,17 @@ operator|new
 name|YarnConfiguration
 argument_list|()
 decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|AUTO_FAILOVER_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|cluster
 operator|=
 operator|new
